# dasch-sky-mosaic

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/output/: m31_10deg_b16_cachedcombine_manifest.json  m31_10deg_b16_cachedcombine_v2_manifest.json  m31_10deg_b16_cachedcombine_v3_manifest.json  m31_10deg_b16_cachedcombine_v4_manifest.json  m31_10deg_b16_overlap_tuned_v6_manifest.json  m31_10deg_b16_test_manifest.json  m31_10deg_bin16_test_manifest.json  m31_latest_single_1deg_manifest.json  m31_latest_single_b1_test_manifest.json  m31_latest_single_test_manifest.json  m31_native_default_test_manifest.json  m31_overlapmask_fix_test_manifest.json  m31_overlapmask_test_manifest.json  m83_10deg_b16_full_v1_manifest.json  progress_test_manifest.json
src/dasch_sky_mosaic/: __init__.py  __main__.py  api.py  background.py  cli.py  fetch.py  pipeline.py  plate_photos.py  wtml.py
